# mal

./: README.md
src/: CMakeLists.txt
src/sources/: Test.cpp  Test.hpp
src/sources/c++/bits/: bits-stream.cpp  bits-stream.h  bits.cpp  bits.h  bits_stream.cpp  bits_stream.hpp
src/sources/c++/c_ffi/: mdp_parser.cpp  mdp_parser.h  mdp_type_def.h
src/sources/c++/datasource/: IDataSource.h  IParser.cpp  IParser.h  LocalDataSource.cpp  LocalDataSource.h  MDPAtom.h  MP4Parser.cpp  MP4Parser.h  mal_golomb.cpp  mal_golomb.h  mal_idatasource.h  mal_local_datasource.cpp  mal_local_datasource.h
src/sources/c++/loader/: mal_ff_packet_loader.cpp  mal_ff_packet_loader.hpp  mal_mp4_packet_loader.cpp  mal_mp4_packet_loader.hpp  mal_packet_loader.cpp  mal_packet_loader.hpp
src/sources/c++/parser/: mal_atom.h  mal_codec_parser.cpp  mal_codec_parser.h  mal_dump.cpp  mal_dump.hpp  mal_flv_parser.cpp  mal_flv_parser.hpp  mal_h2645.cpp  mal_h2645.h  mal_i_parser.cpp  mal_i_parser.h  mal_mov_parser.cpp  mal_mov_parser.h  mal_webp_parser.cpp  mal_webp_parser.hpp
src/sources/dart/: dart_init.c  dart_init.h
src/sources/utils/: golomb.cpp  mal_string.cpp  mal_string.hpp  mdp_bits.c  mdp_bits.h  mdp_error.c  mdp_error.h  mdp_int.c  mdp_int.h  mdp_log.h  mdp_string.c  mdp_string.h  mdp_type_def.h  thpool.c  thpool.h
src/test/: CMakeLists.txt  mdp_mov_parser_test.c  rebuild.sh
src/test/mac-build/: compile-mac.sh
